forced Horizontal scrolling fixed

--- a/Styles.css
+++ b/Styles.css
@@ -8,5 +8,8 @@ h2{
     text-align: center;
 }
 .navbar{
-    background-color: blue;
+    background-color:93A8AC;
+}
+.card{
+    padding: 0;
 }
